test/zinc_source/compile_errors/callables/26_arrow_lambda_default_second_param.zn
// expected-error: arrow lambda parameters cannot have defaults
fn main() {
    f = (x, y = 2) -> x + y
    print(f(1))
}
